--- a/MVCLabb/MVCLabb/Views/Gallery/Gallery.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/Gallery.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Gallery";
 }
 
-<h2>Gallery</h2>
+<h2>@ViewBag.Title</h2>
 <p>Here are some photos</p>
 
 @foreach(var photo in Model)
