--- a/MVCLabb/MVCLabb/Views/Gallery/UploadPicture.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/UploadPicture.cshtml
@@ -3,5 +3,5 @@
     ViewBag.Title = "UploadPicture";
 }
 
-<h2>ViewBag.Title</h2>
-
+<h2>UploadPicture</h2>
+<input type="file" name="file" id="file" />
