--- a/MVCLabb/MVCLabb/Views/Gallery/ShowImage.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/ShowImage.cshtml
@@ -4,4 +4,13 @@
 }
 
 <h2>ShowImage</h2>
-<img src="/Image/@Model.PhotoName"/>
+<div class="row">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="/Image/@Model.PhotoName" />
+            <div class="caption">
+                <h3>@Model.PhotoName</h3>
+            </div>
+        </div>
+    </div>
+</div>
