--- a/MVCLabb/MVCLabb/Views/Gallery/DeletePicture.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/DeletePicture.cshtml
@@ -1,7 +1,40 @@
-﻿
+﻿@model MVCLabb.Models.Photo
+
 @{
     ViewBag.Title = "DeletePicture";
 }
 
 <h2>DeletePicture</h2>
 
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>Photo</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.PhotoName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PhotoName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PhotoComment)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PhotoComment)
+        </dd>
+
+    </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Gallery")
+        </div>
+    }
+</div>
