--- a/MVCLabb/MVCLabb/Views/Gallery/Gallery.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/Gallery.cshtml
@@ -12,8 +12,10 @@
             <div class="thumbnail">
                 <img src="/Image/@photo.PhotoName" />
                 <div class="caption">
+                    <h3>@photo.PhotoID</h3>
                     <h3>@photo.PhotoName</h3>
-                    @Html.ActionLink("Show Picture", "ShowImage", "Gallery", new { id = photo.PhotoID }, null)
+                    @Html.ActionLink("Show Picture", "ShowImage", "Gallery", new{ id = photo.PhotoID }, null)
+                    @Html.ActionLink("Delete Picture", "DeletePicture", "Gallery", new { id = photo.PhotoID }, null)
                 </div>
             </div>
         </div>
