--- a/MVCLabb/MVCLabb/Views/Gallery/UploadPicture.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/UploadPicture.cshtml
@@ -4,38 +4,37 @@
 }
 
 <h2>UploadPicture</h2>
-@using (Html.BeginForm(
-                                                "UploadPicture",
-                                                "Gallery",
-                                                FormMethod.Post,
-                                                new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm( "UploadPicture",
+                        "Gallery",
+                        FormMethod.Post,
+                        new { enctype = "multipart/form-data" }))
 {
     @*<input type="file" name="file" id="file" />
             <input type="submit" name="Create" />
         }*@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @*<div class="form-group">
-        @Html.LabelFor(model => model.Name,
-    htmlAttributes: new { @class = "control-label col-md-2" })
+               @Html.LabelFor(model => model.Name,
+           htmlAttributes: new { @class = "control-label col-md-2" })
+               <div class="col-md-10">
+                   @Html.EditorFor(model => model.Name,
+        new { htmlAttributes = new { @class = "form-control" } })
+                   @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+               </div>
+           </div>*@
+    <div class="form-group">
+        <label class="control-label col-md-2" for="Photo">
+            Photo
+        </label>
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Name,
- new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            <input type="file" name="file" id="file" />
+            @Html.ValidationMessage("error")
         </div>
-    </div>*@
-        <div class="form-group">
-            <label class="control-label col-md-2" for="Photo">
-                Photo
-            </label>
-            <div class="col-md-10">
-                <input type="file" name="file" id="file" />
-                @Html.ValidationMessage("error")
-            </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
         </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Create" class="btn btn-default" />
-                        </div>
-                    </div>
+    </div>
 }
 
