--- a/MVCLabb/MVCLabb/Views/Shared/_Layout.cshtml
+++ b/MVCLabb/MVCLabb/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Gallery Of Pictures</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Gallery","Gallery","Gallery")</li>
+                    <li>@Html.ActionLink("Upload Picture","UploadPicture","Gallery")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
