--- a/MVCLabb/MVCLabb/Views/Gallery/UploadPicture.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/UploadPicture.cshtml
@@ -29,6 +29,8 @@
         <div class="col-md-10">
             <input type="file" name="file" id="file" />
             @Html.ValidationMessage("error")
+           <input type="text" name="comment" id="comment"/>
+            
         </div>
     </div>
     <div class="form-group">
