added a new controller called album

--- a/MVCLabb/MVCLabb/Views/Gallery/Gallery.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/Gallery.cshtml
@@ -40,6 +40,7 @@
 </div>
 
 @section latest{
+    <h3>Latest uploaded Picture</h3>
     @foreach (Photo result in Model)
     {
         if (Model.IndexOf(result) == Model.Count - 1)
