--- a/MVCLabb/MVCLabb/Views/Shared/_Layout.cshtml
+++ b/MVCLabb/MVCLabb/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Gallery","Gallery","Gallery")</li>
                     <li>@Html.ActionLink("Upload Picture","UploadPicture","Gallery")</li>
+                    <li>@Html.ActionLink("Create Album","CreateAlbum","Album")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
