fixed the album

--- a/MVCLabb/MVCLabb/Views/Album/Index.cshtml
+++ b/MVCLabb/MVCLabb/Views/Album/Index.cshtml
@@ -23,7 +23,7 @@
             @Html.DisplayFor(modelItem => album.AlbumName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id= album.AlbumID }) |
+            @*@Html.ActionLink("Edit", "Edit", new { id= album.AlbumID }) |*@
             @Html.ActionLink("Details", "Details", new { id= album.AlbumID }) |
             @Html.ActionLink("Delete", "Delete", new { id= album.AlbumID })
         </td>
