--- a/MVCLabb/MVCLabb/Views/Album/AddPhotoToAlbum.cshtml
+++ b/MVCLabb/MVCLabb/Views/Album/AddPhotoToAlbum.cshtml
@@ -7,6 +7,7 @@
 <h2>AddPhotoToAlbum</h2>
 @using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
     foreach (var photo in Model.Photos)
     {
         <div>
