--- a/MVCLabb/MVCLabb/Views/Gallery/UploadPicture.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/UploadPicture.cshtml
@@ -10,28 +10,15 @@
                                     new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    @*<input type="file" name="file" id="file" />
-            <input type="submit" name="Create" />
-        }*@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @*<div class="form-group">
-               @Html.LabelFor(model => model.Name,
-           htmlAttributes: new { @class = "control-label col-md-2" })
-               <div class="col-md-10">
-                   @Html.EditorFor(model => model.Name,
-        new { htmlAttributes = new { @class = "form-control" } })
-                   @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-               </div>
-           </div>*@
     <div class="form-group">
         <label class="control-label col-md-2" for="Photo">
             Photo
         </label>
         <div class="col-md-10">
-            <input type="file" name="file" id="file" />
+            <input type="file" name="files" id="file" multiple="multiple"/>
             @Html.ValidationMessage("error")
-           <input type="text" name="comment" id="comment"/>
-            
+           <input type="text" name="comment" id="comment"/>    
         </div>
     </div>
     <div class="form-group">
