--- a/MVCLabb/MVCLabb/Views/Shared/_Layout.cshtml
+++ b/MVCLabb/MVCLabb/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
+    @*<script src="~/Scripts/jquery-3.1.1.min.js"></script>*@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
