--- a/MVCLabb/MVCLabb/Views/Gallery/UploadPicture.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/UploadPicture.cshtml
@@ -4,6 +4,9 @@
 }
 
 <h2>UploadPicture</h2>
+<div id="imgSpinner1" style="display:none">
+    <img src="~/Image/SpinnerImage/ajax-loader.gif" />
+</div>
 @using (Html.BeginForm("UploadPicture",
                                     "Gallery",
                                     FormMethod.Post,
@@ -23,8 +26,12 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Create" id="btnAddPhoto" class="btn btn-default" />
         </div>
     </div>
 }
+@section script{
+    
+<script src="~/Scripts/MyJavaScriptFile.js"></script>
+    }
 
