--- a/MVCLabb/MVCLabb/Views/Gallery/DeletePicture.cshtml
+++ b/MVCLabb/MVCLabb/Views/Gallery/DeletePicture.cshtml
@@ -10,6 +10,9 @@
 <div>
     <h4>Photo</h4>
     <hr />
+    <div id="imgSpinner1" style="display:none">
+        <img src="~/Image/SpinnerImage/ajax-loader.gif" />
+    </div>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.PhotoName)
