--- a/MVCLabb/MVCLabbAjax/Views/Gallery/Index.cshtml
+++ b/MVCLabb/MVCLabbAjax/Views/Gallery/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+   
 }
 
 @{ 
@@ -19,15 +19,32 @@
         UpdateTargetId = "result"
     };
 }
+@Html.ActionLink("Upload New Picture", "UploadPicture")
 <h2>Index</h2>
 @foreach (var photo in Model)
 {
    <div>
        <img src="/Image/@photo.PhotoName" />
    </div>
-   foreach (var comment in photo.PhotoComment)
-   {
-       @comment.CommentOnPicture
-   }
+   <h4>Comment:</h4>
+    foreach (var comment in photo.PhotoComment)
+    {
+        <div>
+            @comment.CommentOnPicture
+        </div>
+    }
     @Ajax.ActionLink($"Add Comment {photo.PhotoName}","AddComment",new { id=photo.PhotoID}, ajaxListAllPhoto)
+    @Ajax.ActionLink($"Show Image {photo.PhotoName}", "ShowImage", new { id=photo.PhotoID}, ajaxListAllPhoto)
+    @Ajax.ActionLink($"Delete", "DeletePicture", new { id=photo.PhotoID}, ajaxOption)
+}
+@section latest{
+    <h3>Latest uploaded Picture</h3>
+    @foreach (var result in Model)
+    {
+        if (Model.IndexOf(result) == Model.Count - 1)
+        {
+            // this is the last item
+            <img src="/Image/@result.PhotoName" />
+        }
+    }
 }
