--- a/MVCLabb/MVCLabbAjax/Views/Shared/_Layout.cshtml
+++ b/MVCLabb/MVCLabbAjax/Views/Shared/_Layout.cshtml
@@ -27,13 +27,18 @@
     </div>
 
     <div class="container body-content">
-        @RenderBody()
+        <div id="content">
+            @RenderBody()
+        </div>
         <hr />
+        @RenderSection("latest", required: false)
         <footer>
             <p>&copy; @DateTime.Now.Year - Gallery</p>
         </footer>
     </div>
     <script src="~/scripts/jquery-3.1.1.min.js"></script>
+    <script src="~/scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/scripts/MyMain.js"></script>
 </body>
 </html>
