--- a/MVCLabb/MVCLabbAjax/Views/Album/Index.cshtml
+++ b/MVCLabb/MVCLabbAjax/Views/Album/Index.cshtml
@@ -30,9 +30,10 @@
                 @Html.DisplayFor(modelItem => album.AlbumName)
             </td>
             <td>
-                @Ajax.ActionLink("Edit Album", "Edit", new { id = album.AlbumID }, ajaxListAllAlbum) 
-                @Ajax.ActionLink("Details Album", "Details", new { id = album.AlbumID }, ajaxListAllAlbum) 
+                @Ajax.ActionLink("Comment Album", "AddComment", new { id = album.AlbumID }, ajaxListAllAlbum) 
+                @Ajax.ActionLink("Show Album", "ShowAlbum", new { id = album.AlbumID }, ajaxListAllAlbum) 
                 @Ajax.ActionLink("Delete Album", "Delete", new { id = album.AlbumID }, ajaxOption)
+                @Ajax.ActionLink("Add Photo to Album", "AddPhotoToAlbum",new { id=album.AlbumID},ajaxOption)
             </td>
             <td>
                 @foreach (var item in album.AlbumComment)
