--- a/MVCLabb/MVCLabbAjax/Views/Album/Index.cshtml
+++ b/MVCLabb/MVCLabbAjax/Views/Album/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    
 }
 
 
@@ -11,18 +11,18 @@
     {
         HttpMethod = "GET",
         InsertionMode = InsertionMode.Replace,
-        UpdateTargetId = "result"
+        UpdateTargetId = "content"
     };
     var ajaxOption = new AjaxOptions
     {
         HttpMethod = "POST",
         InsertionMode = InsertionMode.Replace,
-        UpdateTargetId = "result"
+        UpdateTargetId = "content"
     };
 }
 
 <h2>Index</h2>
-<table class="table">
+<table>
     @foreach (var album in Model)
     {
         <tr>
@@ -33,7 +33,7 @@
                 @Ajax.ActionLink("Comment Album", "AddComment", new { id = album.AlbumID }, ajaxListAllAlbum) 
                 @Ajax.ActionLink("Show Album", "ShowAlbum", new { id = album.AlbumID }, ajaxListAllAlbum) 
                 @Ajax.ActionLink("Delete Album", "Delete", new { id = album.AlbumID }, ajaxOption)
-                @Ajax.ActionLink("Add Photo to Album", "AddPhotoToAlbum",new { id=album.AlbumID},ajaxOption)
+                @Ajax.ActionLink("Add Photo to Album", "AddPhotoToAlbum",new { id=album.AlbumID}, ajaxListAllAlbum)
             </td>
             <td>
                 @foreach (var item in album.AlbumComment)
