--- a/MVCLabb/MVCLabbAjax/Views/Gallery/UploadPicture.cshtml
+++ b/MVCLabb/MVCLabbAjax/Views/Gallery/UploadPicture.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm("UploadPicture",
                                                 "Gallery",
                                                 FormMethod.Post,
-                                                new { enctype = "multipart/form-data" }))
+                                                new { enctype = "multipart/form-data",id="uploadpicture"}))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -28,4 +28,8 @@
             <input type="submit" value="Create" id="btnAddPhoto"/>
         </div>
     </div>
+}
+
+@section scripts {
+    <script src="~/scripts/MyMain.js"></script>
 }
