--- a/MVCLabb/MVCLabbAjax/Views/Shared/_Layout.cshtml
+++ b/MVCLabb/MVCLabbAjax/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
     <script src="~/scripts/jquery-3.1.1.min.js"></script>
     <script src="~/scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/scripts/MyMain.js"></script>
+
+    @RenderSection("scripts", required: false)
 </body>
 </html>
