fixed some more

--- a/TestningavDatabas/MVCLabb/MVCLabbAjax/Views/Album/Index.cshtml
+++ b/TestningavDatabas/MVCLabb/MVCLabbAjax/Views/Album/Index.cshtml
@@ -23,6 +23,7 @@
 
 <h2>Index</h2>
 <table>
+    @Html.ActionLink("Create Album","AddNewAlbum", ajaxListAllAlbum)
     @foreach (var album in Model)
     {
         <tr>
