--- a/TestningavDatabas/MVCLabb/MVCLabbAjax/Views/Album/AddNewAlbum.cshtml
+++ b/TestningavDatabas/MVCLabb/MVCLabbAjax/Views/Album/AddNewAlbum.cshtml
@@ -16,11 +16,7 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.AlbumComment, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.AlbumComment, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AlbumComment, "", new { @class = "text-danger" })
-            </div>
+           <input type="text" name="albumcomment"/>
         </div>
 
         <div class="form-group">
