--- a/TestningavDatabas/MVCLabb/MVCLabbAjax/Views/Gallery/UploadPicture.cshtml
+++ b/TestningavDatabas/MVCLabb/MVCLabbAjax/Views/Gallery/UploadPicture.cshtml
@@ -28,6 +28,7 @@
             <input type="submit" value="Create" id="btnAddPhoto"/>
         </div>
     </div>
+    @Html.ActionLink("Back to Index","Index")
 }
 
 @section scripts {
