--- a/TestningavDatabas/MVCLabb/MVCLabbAjax/Views/Album/AddComment.cshtml
+++ b/TestningavDatabas/MVCLabb/MVCLabbAjax/Views/Album/AddComment.cshtml
@@ -13,6 +13,9 @@
     <input type="text" name="albumComment" />
     <input type="submit" value="Add Comment" />
 }
+<div id="Addcomment">
+    @{Html.RenderAction("IndexPartial");}
+</div>
 
 
 
