--- a/TestningavDatabas/MVCLabb/MVCLabbAjax/Views/Album/ShowAlbum.cshtml
+++ b/TestningavDatabas/MVCLabb/MVCLabbAjax/Views/Album/ShowAlbum.cshtml
@@ -1,9 +1,9 @@
 ﻿@model MVCLabbAjax.Models.Album
 <h2>Details</h2>
 <h3>@Model.AlbumName</h3>
-@foreach (var item in Model.Photos)
+@*@foreach (var item in Model.Photos)
 {
     <img src="/Image/@item.PhotoName" />
-}
+}*@
 
 
